// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmbientIntelligenceDemo Snapshot matches snapshot in initial state 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Ambient Intelligence Dashboard
      </h2>
      <p
        class="text-gray-600"
      >
        AI that works quietly in the background
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
      >
        <option
          value="active"
        >
          Active Mode
        </option>
        <option
          value="minimal"
        >
          Minimal Mode
        </option>
        <option
          value="off"
        >
          Off
        </option>
      </select>
      <button
        class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors"
      >
        Hide
         Insights
      </button>
    </div>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4 mb-6"
      >
        <h3
          class="font-medium text-gray-900 mb-4"
        >
          Context Simulation
        </h3>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Time of Day
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="morning"
              >
                Morning
              </option>
              <option
                value="afternoon"
              >
                Afternoon
              </option>
              <option
                value="evening"
              >
                Evening
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Activity
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="working"
              >
                Working
              </option>
              <option
                value="meeting"
              >
                In Meeting
              </option>
              <option
                value="break"
              >
                On Break
              </option>
              <option
                value="commuting"
              >
                Commuting
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Location
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="office"
              >
                Office
              </option>
              <option
                value="home"
              >
                Home
              </option>
              <option
                value="cafe"
              >
                Cafe
              </option>
              <option
                value="travel"
              >
                Traveling
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Focus Level: 
              85
              %
            </label>
            <input
              class="w-full"
              max="100"
              min="0"
              type="range"
              value="85"
            />
            <div
              class="w-full bg-gray-200 rounded-full h-2 mt-2"
            >
              <div
                class="h-2 rounded-full transition-all duration-300 bg-green-500"
                style="width: 85%;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-white border border-gray-200 rounded-lg"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Main Workspace
          </span>
        </div>
        <div
          class="p-8 text-center text-gray-500"
        >
          <div
            class="w-16 h-16 bg-gray-200 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-2xl"
            >
              💻
            </span>
          </div>
          <p
            class="font-medium"
          >
            Your main work area
          </p>
          <p
            class="text-sm mt-2"
          >
            AI observes context and provides subtle assistance
          </p>
          <div
            class="mt-4 text-xs text-gray-400"
          >
            Currently: 
            working
             at 
            office
             (
            morning
            )
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Ambient Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Status:
            </span>
            <span
              class="font-medium text-green-600"
            >
              Active
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Insights:
            </span>
            <span
              class="font-medium"
            >
              2
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Context Updates:
            </span>
            <span
              class="font-medium"
            >
              Real-time
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Privacy Mode:
            </span>
            <span
              class="font-medium"
            >
              Enhanced
            </span>
          </div>
        </div>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="font-medium text-gray-900"
        >
          Ambient Insights
        </h3>
        <div
          class="border rounded-lg p-3 transition-all duration-300 border-yellow-300 bg-yellow-50"
        >
          <div
            class="flex items-start justify-between mb-2"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                🎯
              </span>
              <span
                class="text-xs font-medium uppercase text-gray-600"
              >
                contextual
              </span>
              <span
                class="text-xs px-1 rounded bg-yellow-200 text-yellow-800"
              >
                medium
              </span>
            </div>
            <button
              aria-label="Dismiss insight"
              class="text-gray-400 hover:text-gray-600 text-xs"
            >
              ✕
            </button>
          </div>
          <h4
            class="font-medium text-gray-900 text-sm mb-1"
          >
            Peak Productivity Window
          </h4>
          <p
            class="text-xs text-gray-600 mb-2"
          >
            Your focus levels are typically highest right now. Consider tackling complex tasks.
          </p>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-xs text-gray-500"
            >
              87
              % confidence
            </span>
          </div>
        </div>
        <div
          class="border rounded-lg p-3 transition-all duration-300 border-yellow-300 bg-yellow-50"
        >
          <div
            class="flex items-start justify-between mb-2"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                🧠
              </span>
              <span
                class="text-xs font-medium uppercase text-gray-600"
              >
                adaptive
              </span>
              <span
                class="text-xs px-1 rounded bg-yellow-200 text-yellow-800"
              >
                medium
              </span>
            </div>
            <button
              aria-label="Dismiss insight"
              class="text-gray-400 hover:text-gray-600 text-xs"
            >
              ✕
            </button>
          </div>
          <h4
            class="font-medium text-gray-900 text-sm mb-1"
          >
            High Focus Detected
          </h4>
          <p
            class="text-xs text-gray-600 mb-2"
          >
            You're in a flow state. Consider tackling your most challenging task now.
          </p>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-xs text-gray-500"
            >
              89
              % confidence
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-3"
        >
          Privacy Controls
        </h3>
        <div
          class="space-y-2 text-sm text-green-700"
        >
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Context awareness
          </label>
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Productivity insights
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Location tracking
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Biometric monitoring
          </label>
        </div>
        <p
          class="text-xs text-green-600 mt-2"
        >
          2
           of 4 features enabled
        </p>
      </div>
      <div
        class="bg-blue-50 border border-blue-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-blue-900 mb-2"
        >
          Usage Tips
        </h3>
        <ul
          class="text-sm space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Adjust context settings to see different insights
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Focus level automatically decreases over time
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Privacy settings affect which insights appear
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes to see varying levels of activity
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`AmbientIntelligenceDemo Snapshot matches snapshot with hidden insights 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Ambient Intelligence Dashboard
      </h2>
      <p
        class="text-gray-600"
      >
        AI that works quietly in the background
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
      >
        <option
          value="active"
        >
          Active Mode
        </option>
        <option
          value="minimal"
        >
          Minimal Mode
        </option>
        <option
          value="off"
        >
          Off
        </option>
      </select>
      <button
        class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors"
      >
        Show
         Insights
      </button>
    </div>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4 mb-6"
      >
        <h3
          class="font-medium text-gray-900 mb-4"
        >
          Context Simulation
        </h3>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Time of Day
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="morning"
              >
                Morning
              </option>
              <option
                value="afternoon"
              >
                Afternoon
              </option>
              <option
                value="evening"
              >
                Evening
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Activity
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="working"
              >
                Working
              </option>
              <option
                value="meeting"
              >
                In Meeting
              </option>
              <option
                value="break"
              >
                On Break
              </option>
              <option
                value="commuting"
              >
                Commuting
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Location
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="office"
              >
                Office
              </option>
              <option
                value="home"
              >
                Home
              </option>
              <option
                value="cafe"
              >
                Cafe
              </option>
              <option
                value="travel"
              >
                Traveling
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Focus Level: 
              85
              %
            </label>
            <input
              class="w-full"
              max="100"
              min="0"
              type="range"
              value="85"
            />
            <div
              class="w-full bg-gray-200 rounded-full h-2 mt-2"
            >
              <div
                class="h-2 rounded-full transition-all duration-300 bg-green-500"
                style="width: 85%;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-white border border-gray-200 rounded-lg"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Main Workspace
          </span>
        </div>
        <div
          class="p-8 text-center text-gray-500"
        >
          <div
            class="w-16 h-16 bg-gray-200 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-2xl"
            >
              💻
            </span>
          </div>
          <p
            class="font-medium"
          >
            Your main work area
          </p>
          <p
            class="text-sm mt-2"
          >
            AI observes context and provides subtle assistance
          </p>
          <div
            class="mt-4 text-xs text-gray-400"
          >
            Currently: 
            working
             at 
            office
             (
            morning
            )
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Ambient Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Status:
            </span>
            <span
              class="font-medium text-green-600"
            >
              Active
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Insights:
            </span>
            <span
              class="font-medium"
            >
              2
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Context Updates:
            </span>
            <span
              class="font-medium"
            >
              Real-time
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Privacy Mode:
            </span>
            <span
              class="font-medium"
            >
              Enhanced
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-3"
        >
          Privacy Controls
        </h3>
        <div
          class="space-y-2 text-sm text-green-700"
        >
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Context awareness
          </label>
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Productivity insights
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Location tracking
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Biometric monitoring
          </label>
        </div>
        <p
          class="text-xs text-green-600 mt-2"
        >
          2
           of 4 features enabled
        </p>
      </div>
      <div
        class="bg-blue-50 border border-blue-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-blue-900 mb-2"
        >
          Usage Tips
        </h3>
        <ul
          class="text-sm space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Adjust context settings to see different insights
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Focus level automatically decreases over time
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Privacy settings affect which insights appear
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes to see varying levels of activity
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`AmbientIntelligenceDemo Snapshot matches snapshot with minimal mode 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Ambient Intelligence Dashboard
      </h2>
      <p
        class="text-gray-600"
      >
        AI that works quietly in the background
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-purple-500"
      >
        <option
          value="active"
        >
          Active Mode
        </option>
        <option
          value="minimal"
        >
          Minimal Mode
        </option>
        <option
          value="off"
        >
          Off
        </option>
      </select>
      <button
        class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors"
      >
        Hide
         Insights
      </button>
    </div>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4 mb-6"
      >
        <h3
          class="font-medium text-gray-900 mb-4"
        >
          Context Simulation
        </h3>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Time of Day
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="morning"
              >
                Morning
              </option>
              <option
                value="afternoon"
              >
                Afternoon
              </option>
              <option
                value="evening"
              >
                Evening
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Activity
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="working"
              >
                Working
              </option>
              <option
                value="meeting"
              >
                In Meeting
              </option>
              <option
                value="break"
              >
                On Break
              </option>
              <option
                value="commuting"
              >
                Commuting
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Location
            </label>
            <select
              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"
            >
              <option
                value="office"
              >
                Office
              </option>
              <option
                value="home"
              >
                Home
              </option>
              <option
                value="cafe"
              >
                Cafe
              </option>
              <option
                value="travel"
              >
                Traveling
              </option>
            </select>
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-2"
            >
              Focus Level: 
              85
              %
            </label>
            <input
              class="w-full"
              max="100"
              min="0"
              type="range"
              value="85"
            />
            <div
              class="w-full bg-gray-200 rounded-full h-2 mt-2"
            >
              <div
                class="h-2 rounded-full transition-all duration-300 bg-green-500"
                style="width: 85%;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-white border border-gray-200 rounded-lg"
      >
        <div
          class="bg-gray-50 px-4 py-2 border-b border-gray-200"
        >
          <span
            class="text-sm font-medium text-gray-700"
          >
            Main Workspace
          </span>
        </div>
        <div
          class="p-8 text-center text-gray-500"
        >
          <div
            class="w-16 h-16 bg-gray-200 rounded-full mx-auto mb-4 flex items-center justify-center"
          >
            <span
              class="text-2xl"
            >
              💻
            </span>
          </div>
          <p
            class="font-medium"
          >
            Your main work area
          </p>
          <p
            class="text-sm mt-2"
          >
            AI observes context and provides subtle assistance
          </p>
          <div
            class="mt-4 text-xs text-gray-400"
          >
            Currently: 
            working
             at 
            office
             (
            morning
            )
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Ambient Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Status:
            </span>
            <span
              class="font-medium text-yellow-600"
            >
              Minimal
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Insights:
            </span>
            <span
              class="font-medium"
            >
              2
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Context Updates:
            </span>
            <span
              class="font-medium"
            >
              Periodic
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Privacy Mode:
            </span>
            <span
              class="font-medium"
            >
              Enhanced
            </span>
          </div>
        </div>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="font-medium text-gray-900"
        >
          Ambient Insights
        </h3>
        <div
          class="border rounded-lg p-3 transition-all duration-300 border-yellow-300 bg-yellow-50"
        >
          <div
            class="flex items-start justify-between mb-2"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                🎯
              </span>
              <span
                class="text-xs font-medium uppercase text-gray-600"
              >
                contextual
              </span>
              <span
                class="text-xs px-1 rounded bg-yellow-200 text-yellow-800"
              >
                medium
              </span>
            </div>
            <button
              aria-label="Dismiss insight"
              class="text-gray-400 hover:text-gray-600 text-xs"
            >
              ✕
            </button>
          </div>
          <h4
            class="font-medium text-gray-900 text-sm mb-1"
          >
            Peak Productivity Window
          </h4>
          <p
            class="text-xs text-gray-600 mb-2"
          >
            Your focus levels are typically highest right now. Consider tackling complex tasks.
          </p>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-xs text-gray-500"
            >
              87
              % confidence
            </span>
          </div>
        </div>
        <div
          class="border rounded-lg p-3 transition-all duration-300 border-yellow-300 bg-yellow-50"
        >
          <div
            class="flex items-start justify-between mb-2"
          >
            <div
              class="flex items-center space-x-2"
            >
              <span>
                🧠
              </span>
              <span
                class="text-xs font-medium uppercase text-gray-600"
              >
                adaptive
              </span>
              <span
                class="text-xs px-1 rounded bg-yellow-200 text-yellow-800"
              >
                medium
              </span>
            </div>
            <button
              aria-label="Dismiss insight"
              class="text-gray-400 hover:text-gray-600 text-xs"
            >
              ✕
            </button>
          </div>
          <h4
            class="font-medium text-gray-900 text-sm mb-1"
          >
            High Focus Detected
          </h4>
          <p
            class="text-xs text-gray-600 mb-2"
          >
            You're in a flow state. Consider tackling your most challenging task now.
          </p>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-xs text-gray-500"
            >
              89
              % confidence
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-3"
        >
          Privacy Controls
        </h3>
        <div
          class="space-y-2 text-sm text-green-700"
        >
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Context awareness
          </label>
          <label
            class="flex items-center"
          >
            <input
              checked=""
              class="mr-2"
              type="checkbox"
            />
            Productivity insights
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Location tracking
          </label>
          <label
            class="flex items-center"
          >
            <input
              class="mr-2"
              type="checkbox"
            />
            Biometric monitoring
          </label>
        </div>
        <p
          class="text-xs text-green-600 mt-2"
        >
          2
           of 4 features enabled
        </p>
      </div>
      <div
        class="bg-blue-50 border border-blue-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-blue-900 mb-2"
        >
          Usage Tips
        </h3>
        <ul
          class="text-sm space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Adjust context settings to see different insights
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Focus level automatically decreases over time
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Privacy settings affect which insights appear
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-blue-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes to see varying levels of activity
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
